--- a/server/package.json
+++ b/server/package.json
@@ -31,11 +31,15 @@
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.1",
     "@types/bcryptjs": "^2.4.2",
+    "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.7",
+    "@types/uuid": "^8.3.4",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -44,7 +48,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.10",
-    "uninstall": "^0.0.0"
+    "uninstall": "^0.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
