Added remote DB & added loading to queries.

--- a/server/package.json
+++ b/server/package.json
@@ -21,14 +21,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@casl/ability": "^6.3.1",
-    "@nestjs/azure-func-http": "^0.8.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.1",
     "@types/bcryptjs": "^2.4.2",
@@ -41,6 +42,7 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
     "multer": "^1.4.5-lts.1",
+    "nest-router": "^1.0.9",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
