--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-loader-spinner": "^4.0.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.1.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-loader-spinner": "^5.3.4",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.4.2",
     "sass": "^1.55.0"
