--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A web application made for taking notes and sharing notes for revision.",
   "scripts": {
     "heroku-prebuild": "cd app && npm i && npm run build && cd .. && cd app && npm i",
-    "start": "cd app && node dist/main.js"
+    "start": "cd app && npm run start:prod"
   },
   "repository": {
     "type": "git",
