--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,4 +1,5 @@
 # compiled output
+/dist
 /node_modules
 .env
 db.sql
@@ -12,6 +13,8 @@ pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+deep-castle-369213-87815faa0cb2.json
+credentials.json
 
 # OS
 .DS_Store
