--- a/app/client/package.json
+++ b/app/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react-loader-spinner": "^4.0.0",
+    "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.1.2",
     "jwt-decode": "^3.1.2",
@@ -17,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-loader-spinner": "^5.3.4",
-    "react-masonry-css": "^1.0.16",
+    "react-masonry-component": "^6.3.0",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.4.2",
     "sass": "^1.55.0"
   },
