--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "@casl/ability": "^6.3.1",
+    "@google-cloud/storage": "^6.7.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -42,7 +43,9 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
     "multer": "^1.4.5-lts.1",
+    "multer-google-storage": "^1.3.0",
     "nest-router": "^1.0.9",
+    "nestjs-typeorm-paginate": "^4.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
