--- a/app/package.json
+++ b/app/package.json
@@ -41,9 +41,9 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "date-and-time": "^2.4.1",
     "dotenv": "^16.0.3",
     "multer": "^1.4.5-lts.1",
-    "multer-google-storage": "^1.3.0",
     "nest-router": "^1.0.9",
     "nestjs-typeorm-paginate": "^4.0.2",
     "passport": "^0.6.0",
